# poetry-package

./: 404.html  index.html  pyproject.toml  search.html  sitemap.xml
api/: index.html
documentation/: index.html
reference/MODULE_NAME/: index.html
search/: search_index.json
